# MsT

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
example-configs/: anthropic.json  gemini.json  mymemory-free.json  openai.json
src/: index.html  settings.css  settings.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs
src-tauri/src/commands/: injection.rs  mod.rs  settings.rs  translate.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/translation/: deepl.rs  libre_translate.rs  mod.rs  provider.rs
src/js/: app.js  settings.js
