[package]
name = "mst"
version = "0.1.0"
edition = "2021"
description = "Cross-platform translation tool"
license = "MIT"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["time"] }
thiserror = "2"
log = "0.4"
env_logger = "0.11"
dirs = "6"
regex-lite = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.59", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_Graphics_Gdi",
] }

[target.'cfg(target_os = "linux")'.dependencies]
enigo = "0.3"
x11 = { version = "2.21", features = ["xlib", "xrecord"] }

[target.'cfg(target_os = "macos")'.dependencies]
enigo = "0.3"
core-graphics = "0.24"
core-foundation = "0.10"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
